--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -10,3 +10,24 @@ h2+p {
     list-style: none;
     border-bottom: 1px solid grey;
 }
+
+a+ul a:link {
+    color: green;
+}
+
+a+ul a:visited {
+    color: red;
+}
+
+a+ul a:hover {
+    color: pink;
+}
+
+a+ul>li:first-child::first-letter {
+    font-weight: bold;
+    font-size: 120%;
+}
+
+a[title="BCIT homepage"] {
+    background-color: yellow;
+}
